Avancement NgRx de la gestion des tags (incomplet)
